Fix lozenge spacing on search page

--- a/app/resources/css/repertorium.css
+++ b/app/resources/css/repertorium.css
@@ -257,7 +257,8 @@ th {
 li .lozenge {
     height: 13px;
 }
-#browse li > a> svg {
+#browse li > a > svg,
+#search li > a > svg {
     padding: 0 0.15em;
 }
 #widgets {
